[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/otchet/ot_main.png" type="Texture" id=1]
[ext_resource path="res://sprites/otchet/ot_1.png" type="Texture" id=2]
[ext_resource path="res://scripts/otchet.gd" type="Script" id=3]
[ext_resource path="res://sprites/otchet/img_67992.png" type="Texture" id=4]
[ext_resource path="res://texts/workCheckedFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://sprites/otchet/maskTest.png" type="Texture" id=6]
[ext_resource path="res://mesh/torch.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/otchet/blockDiagram1.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="otchet" type="RigidBody2D"]
pause_mode = 1
z_as_relative = false
input_pickable = true
collision_layer = 2
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 3 )

[node name="main_col" type="CollisionPolygon2D" parent="."]
position = Vector2( 16, 0 )
scale = Vector2( 1.5, 1.5 )
polygon = PoolVector2Array( 32, -48, -32, -48, -32, 48, 32, 48 )

[node name="sec_col" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 16, 0 )
scale = Vector2( 1.5, 1.5 )
polygon = PoolVector2Array( -96, -48, -32, -48, -32, 48, -96, 48 )

[node name="as_right" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 16, 1.01352e-05 )
scale = Vector2( 1.04348, 1.05109 )
frames = SubResource( 2 )

[node name="pages" type="Label" parent="as_right"]
visible = false
margin_left = -1.91666
margin_top = 60.8892
margin_right = 6.08334
margin_bottom = 74.8892
rect_scale = Vector2( 0.50461, 0.328294 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_main" type="Label" parent="as_right"]
margin_left = -40.0
margin_top = 31.0
margin_right = 44.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ot_1" type="Sprite" parent="."]
position = Vector2( -80, 0.450019 )
scale = Vector2( 1.04348, 1.04453 )
texture = ExtResource( 2 )
flip_h = true

[node name="status" type="Label" parent="ot_1"]
margin_left = -40.0
margin_top = -7.0
margin_right = 37.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pages" type="Label" parent="ot_1"]
margin_left = -1.91666
margin_top = 60.8892
margin_right = 6.08334
margin_bottom = 74.8892
rect_scale = Vector2( 0.50461, 0.328294 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texts" type="Label" parent="ot_1"]
visible = false
margin_left = 54.6249
margin_top = -58.035
margin_right = 62.6249
margin_bottom = -44.035
rect_scale = Vector2( 0.50461, 0.328294 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "22222222222222222222
22222222222222222222
11111111111111111111
11111111111111111111

1223456457
1231
123

123123747
1
123

12312334573221

123123
123123123
123123123
123123123123123
123123123123123
123123123123123123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texts2" type="Label" parent="ot_1"]
visible = false
margin_left = -39.2912
margin_top = -58.8303
margin_right = 120.709
margin_bottom = 295.17
rect_scale = Vector2( 0.50461, 0.328294 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "22222222222222222222
22222222222222222222
11111111111111111111
11111111111111111111

1223456457
1231
123

123123747
1
123

12312334573221

123123
123123123
123123123
123123123123123
123123123123123
123123123123123123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="block_diagram" type="Sprite" parent="ot_1"]
visible = false
position = Vector2( 94, -4 )
scale = Vector2( 1, 1.00628 )
texture = ExtResource( 8 )

[node name="right_a" type="Area2D" parent="."]
position = Vector2( 18, 0 )

[node name="r_png" type="Sprite" parent="right_a"]
position = Vector2( 38, 64 )
rotation = -3.14159
scale = Vector2( 0.014526, 0.0165344 )
texture = ExtResource( 4 )

[node name="right" type="CollisionShape2D" parent="right_a"]
position = Vector2( 38, 64 )
shape = SubResource( 3 )

[node name="left_a" type="Area2D" parent="."]
visible = false
position = Vector2( -28, 21 )

[node name="l_png" type="Sprite" parent="left_a"]
position = Vector2( -88, 40 )
rotation = -3.14159
scale = Vector2( -0.015, 0.017 )
texture = ExtResource( 4 )

[node name="left" type="CollisionShape2D" parent="left_a"]
position = Vector2( -88, 40 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_left = -33.0
margin_top = -72.0
margin_right = 64.0
margin_bottom = 73.0
rect_min_size = Vector2( -0.009, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stampable" type="Area2D" parent="Control"]
position = Vector2( 32, 72 )
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Control/stampable"]
position = Vector2( 0.250351, -0.500687 )
polygon = PoolVector2Array( -31.2504, -71.4993, -31.2504, 72.5007, 64.7496, 72.5007, 64.7496, -71.4993 )

[node name="torch" parent="." instance=ExtResource( 7 )]
position = Vector2( 15.9134, 0.450025 )
scale = Vector2( 0.50552, 0.633186 )
z_index = 3
z_as_relative = false
texture = ExtResource( 6 )

[connection signal="input_event" from="." to="." method="_on_otchet_input_event"]
[connection signal="input_event" from="right_a" to="." method="_on_right_a_input_event"]
[connection signal="input_event" from="left_a" to="." method="_on_left_a_input_event"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
